--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,12 @@
          href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
       />
       <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" />
+      <link
+         rel="stylesheet"
+         href="https://cdn.jsdelivr.net/npm/katex@0.15.1/dist/katex.min.css"
+         integrity="sha384-R4558gYOUz8mP9YWpZJjofhk+zx0AS11p36HnD2ZKj/6JR5z27gSSULCNHIRReVs"
+         crossorigin="anonymous"
+      />
    </head>
    <body>
       <noscript>You need to enable JavaScript to run this app.</noscript>
